# ashpd-test

./: .gitignore  Cargo.toml  README.md  com.github.fries1234.ashpd-test.json  meson.build
src/: main.rs  meson.build
